fixed leftright spacing , font-family and bacground-image

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <!-- font awesome -->
     <script src="./js/all.js"></script>
     <!-- google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Mr+Dafoe"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <!-- magnific popup -->
     <link rel="stylesheet" href="magnefic-popup/magnific-popup.css" />
   </head>
@@ -54,7 +51,7 @@
         <div class="row height-90 align-items-center justify-content-center">
           <div class="col">
             <div class="banner text-center">
-              <h1 class="display-1 text-capitalize w-50 mx-auto">
+              <h1 class="text-capitalize w-50 mx-auto">
                 <small>sushi</small>
                 <strong class="primary-color">monster</strong>
               </h1>
@@ -76,7 +73,7 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
-       <a href="" class="nabar-brand text-uppercase primary-color">sushi monster</a>
+       <a href="" class="nabar-brand text-uppercase primary-color"><h4>sushi monster</h4></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
        data-target="#myNavbar">
        <div class="toggler-btn">
@@ -240,11 +237,11 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">soup</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">soup</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
             </div>
 
@@ -252,13 +249,13 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3 special">
               <div  class="single-item-text">
-                <h2 class="text-uppercase text-dark">soup</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">soup</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
                 <h1 class="text-uppercase text-dark">$10</h1>
               </div>
-              <h3 class="special-text text-capitalize">chef selection</h3>
+              <h5 class="special-text text-capitalize">chef selection</h3>
             </div>
 
             <!--end of single item  -->
@@ -273,11 +270,11 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">suprinshi</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">suprinshi</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
             </div>
 
@@ -285,13 +282,13 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3 special">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">shushi</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">shushi</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
                 <h1 class="text-uppercase text-dark">$10</h1>
               </div>
-              <h3 class="special-text text-capitalize">chef selection</h3>
+              <h5 class="special-text text-capitalize">chef selection</h3>
             </div>
 
             <!--end of single item  -->
@@ -310,22 +307,22 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3 special">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">sushimi</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">sushimi</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
-              <h3 class="special-text text-capitalize">chef selection</h3>
+              <h5 class="special-text text-capitalize">chef selection</h3>
             </div>
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">sushimi</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">sushimi</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
             </div>
 
@@ -344,24 +341,24 @@
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3 special">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">roll</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">roll</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
-              <h3 class="special-text text-capitalize">chef selection</h3>
+              <h5 class="special-text text-capitalize">chef selection</h3>
             </div>
             <!--end of single item  -->
 
             <!-- single item -->
             <div class="single-item d-flex justify-content-between my-3 p-3">
               <div class="single-item-text">
-                <h2 class="text-uppercase text-dark">roll</h2>
-                <h4 class="text-muted">Loerem ipsum doalar with something</h4>
+                <h4 class="text-uppercase text-dark">roll</h2>
+                <h5 class="text-muted">Loerem ipsum doalar with something</h4>
               </div>
               <div class="single-item-price align-self-end">
-                <h1 class="text-uppercase text-dark">$10</h1>
+                <h2 class="text-uppercase text-dark">$10</h1>
               </div>
             </div>
 
@@ -379,10 +376,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 my-4">
-            <h1 class="text-uppercase display-3">
+            <h1 class="text-uppercase display-3 text-white">
               about
             </h1>
-            <h2 class="text-muted">
+            <h2 class="text-white">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.
             </h2>
             <a href="" class="btn main-btn my-4 text-capitalize">learn more</a>
@@ -618,7 +615,7 @@
                       </div>
                       <input type="email" class="form-control form-control-lg" id="email" placeholder="Enter your email here">
                     </div>
-                    <button type="submit" class=" btn-block btn-lg text-uppercase contact-btn">
+                    <button type="submit" class=" btn-block btn-lg text-capitalize contact-btn">
                       <i class="far fa-hand-point-right mr-2"></i>
                       click here
                     </button>
